; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_scc.c_scc_time_to_timestamp.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_scc.c_scc_time_to_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @scc_time_to_timestamp(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %5, align 4
  %10 = sitofp i32 %9 to double
  %11 = fmul double %10, 3.600000e+03
  %12 = load i32, i32* %6, align 4
  %13 = sitofp i32 %12 to double
  %14 = fmul double %13, 6.000000e+01
  %15 = fadd double %11, %14
  %16 = load i32, i32* %7, align 4
  %17 = sitofp i32 %16 to double
  %18 = fadd double %15, %17
  %19 = load i32, i32* %8, align 4
  %20 = sitofp i32 %19 to double
  %21 = fdiv double %20, 2.997000e+01
  %22 = fadd double %18, %21
  ret double %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
